Proof using. introv M K. rewrite~ <- K. Qed.

Lemma not_istrue_isTrue_forw :
  ~ istrue (isTrue P) -> ~ P.
Proof using. apply contrapose. rewrite~ istrue_isTrue. Qed.

Lemma not_istrue_not_isTrue_forw :
  ~ istrue (! isTrue P) -> P.
Proof using.
  rewrite <- (@not_not_eq P). apply contrapose.
  rewrite~ istrue_neg_isTrue.
Qed. (* todo: missing lemma from lib logic about ~A->B *)

Lemma not_istrue_isTrue_back :
  ~ P -> ~ istrue (isTrue P).
Proof using. apply contrapose. rewrite~ istrue_isTrue. Qed.

Lemma not_istrue_not_isTrue_back :
  P -> ~ istrue (! isTrue P).
Proof using.
  rewrite <- (@not_not_eq P). apply contrapose.
  rewrite~ istrue_neg_isTrue.
Qed.

End FoldingProp.

Ltac fold_prop :=
  repeat match goal with
  | H: istrue (isTrue ?P) |- _ => applys_to H istrue_isTrue_forw
  | H: istrue (! isTrue ?P) |- _ => applys_to H istrue_not_isTrue_forw
  | H: ~ istrue (isTrue ?P) |- _ => applys_to H not_istrue_isTrue_forw
  | H: ~ istrue (! isTrue ?P) |- _ => applys_to H not_istrue_not_isTrue_forw
  | H: (?P = True) |- _ => applys_to H prop_eq_True_forw
  | H: (?P = False) |- _ => applys_to H prop_eq_False_forw
  | H: (True = ?P) |- _ => symmetry in H; applys_to H prop_eq_True_forw
  | H: (False = ?P) |- _ => symmetry in H; applys_to H prop_eq_False_forw
  | H: ~ (~ ?P) |- _ => applys_to H not_not_inv
  | |- istrue (isTrue ?P) => apply istrue_isTrue_back
  | |- istrue (! isTrue ?P) => apply istrue_not_isTrue_back
  | |- ~ istrue (isTrue ?P) => apply not_istrue_isTrue_back
  | |- ~ istrue (! isTrue ?P) => apply not_istrue_not_isTrue_back
  | |- (?P = True) => apply prop_eq_True_back
  | |- (?P = False) => apply prop_eq_False_back
  | |- (True = ?P) => symmetry; apply prop_eq_True_back
  | |- (False = ?P) => symmetry; apply prop_eq_False_back
  | |- ~ (~ ?P) => apply not_not
  end.

  (* todo: improve case_if so that there is no need for that *)






(* Extension of [extens] -- DEPRECATED *)

Ltac extens_base :=
  first [ extens_core | intros; extens_core ]; logics.